feat: 批量并发下载

--- a/快速开始.md
+++ b/快速开始.md
@@ -75,7 +75,23 @@ curl -X POST http://localhost:8080/api/v1/download/images \
   }'
 ```
 
-### 3. 查看下载的图片
+### 3. 测试批量下载（可选）
+
+```bash
+curl -X POST http://localhost:8080/api/v1/download/images/batch \
+  -H "Content-Type: application/json" \
+  -d '{
+    "urls": [
+      "https://movie.douban.com/photos/photo/1234567890/",
+      "https://movie.douban.com/photos/photo/1234567891/"
+    ],
+    "targetDir": "batch_test",
+    "concurrent": true,
+    "maxConcurrency": 3
+  }'
+```
+
+### 4. 查看下载的图片
 
 下载的图片会保存在项目根目录的 `downloads` 文件夹中：
 
